[gd_scene load_steps=14 format=4 uid="uid://d27aylsohcuxb"]

[ext_resource type="PackedScene" uid="uid://tmfcc4cfnq2x" path="res://Scenes/background.tscn" id="1_8gbba"]
[ext_resource type="Texture2D" uid="uid://dq50nfvdvak32" path="res://Assets/Images/Tiles.png" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://bl7be8x1mn6nr" path="res://Scripts/main.gd" id="1_kry3j"]
[ext_resource type="PackedScene" uid="uid://b1vcpxjiep28c" path="res://Scenes/player.tscn" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://bdb2vte6qxhai" path="res://Scenes/game_over_line.tscn" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://jshw5vjwn47h" path="res://Scenes/cloud.tscn" id="6_21xkr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bo1nx"]
texture = ExtResource("1_jjgbg")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(14, 14)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, -7, 7, 7, 7, 7, -7)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, -7, 7, 7, 7, 7, -7)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -6, -7, -3, -6, -2, -5, 0, -4, 2, -3, 4, -2, 5, 0, 6, 2, 7, 7, 7, 7, -7, -6, -7)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6, -7, 7, -6, 7, -3, 6, -2, 5, 0, 4, 2, 3, 4, 2, 5, 0, 6, -2, 7, -7, 7, -7, -7)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -6, -7, 7, 7, 7, 7, -6, 6, -7, -6, -7)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -7, -7, 7, 7, 7, 7, -7)

[sub_resource type="TileSet" id="TileSet_8gbba"]
tile_size = Vector2i(14, 14)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_bo1nx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjvhh"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kry3j"]
bg_color = Color(1, 1, 0.301961, 1)

[sub_resource type="Animation" id="Animation_21xkr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kry3j"]
resource_name = "Shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.5, 2.5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6bp64"]
_data = {
&"RESET": SubResource("Animation_21xkr"),
&"Shake": SubResource("Animation_kry3j")
}

[node name="Main" type="Node"]
script = ExtResource("1_kry3j")

[node name="Background" parent="." instance=ExtResource("1_8gbba")]
position = Vector2(576, 324)

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["TileMap"]]
texture_filter = 1
scale = Vector2(3.915, 3.915)
tile_map_data = PackedByteArray("AAADAAgAAAAAAAEAAAAEAAgAAAAAAAAAAAAFAAgAAAABAAEAAAAJAAUAAAAAAAEAAAAKAAUAAAAAAAAAAAALAAUAAAABAAEAAAAPAAgAAAAAAAEAAAAQAAgAAAAAAAAAAAARAAgAAAABAAEAAAA=")
tile_set = SubResource("TileSet_8gbba")

[node name="Player1" parent="." instance=ExtResource("3_8gbba")]
position = Vector2(235, 62)
player_index = 1
device = -1

[node name="Player2" parent="." instance=ExtResource("3_8gbba")]
position = Vector2(907, 52)
player_index = 2

[node name="SpawnPoints" type="Node" parent="."]

[node name="Left" type="Marker2D" parent="SpawnPoints"]
position = Vector2(244, 366)

[node name="Right" type="Marker2D" parent="SpawnPoints"]
position = Vector2(904, 367)

[node name="GameOverLine" parent="." instance=ExtResource("4_jjvhh")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.5
offset_right = 70.5
offset_bottom = 76.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="Player1" type="VBoxContainer" parent="UI/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="UI/Container/Player1"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthProgressBar" type="ProgressBar" parent="UI/Container/Player1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_jjvhh")
theme_override_styles/fill = SubResource("StyleBoxFlat_kry3j")
value = 100.0
show_percentage = false

[node name="Player2" type="VBoxContainer" parent="UI/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="UI/Container/Player2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthProgressBar" type="ProgressBar" parent="UI/Container/Player2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_jjvhh")
theme_override_styles/fill = SubResource("StyleBoxFlat_kry3j")
value = 100.0
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
&"": SubResource("AnimationLibrary_6bp64")
}
speed_scale = 10.0

[node name="Cloud" parent="." instance=ExtResource("6_21xkr")]
position = Vector2(315, 436)
scale = Vector2(3, 3)
start_position = Vector2(315, 436)
end_position = Vector2(1265, 431)

[node name="Cloud2" parent="." instance=ExtResource("6_21xkr")]
position = Vector2(1305, 161)
scale = Vector2(3, 3)
start_position = Vector2(145, 161)
end_position = Vector2(1305, 161)

[node name="Cloud3" parent="." instance=ExtResource("6_21xkr")]
position = Vector2(1299, 308)
scale = Vector2(3, 3)
start_position = Vector2(-180, 308)
end_position = Vector2(1299, 308)
